@@ -1,3 +1,10 @@
+Fri Aug 17 14:45:59 UTC 2012  Byron Harris  <harrisb@ociweb.com>
+
+        * tests/DCPS/CompatibilityTest/run_test.pl:
+
+          Removed passing of endpoints to pub and sub which
+          wasn't being used.
+
 Thu Aug 16 09:08:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dds/InfoRepo/FederatorManagerImpl.cpp:
